RESOLVED FIXED281820
[web-animations] `shouldFireDOMEvents()` and `invalidateDOMEvents()` on `StyleOriginatedAnimation` should be private
https://bugs.webkit.org/show_bug.cgi?id=281820
Summary [web-animations] `shouldFireDOMEvents()` and `invalidateDOMEvents()` on `Styl...
Antoine Quint
Reported 2024-10-19 07:06:49 PDT
The `shouldFireDOMEvents()` and `invalidateDOMEvents()` method on `StyleOriginatedAnimation` should be private.
Attachments
Antoine Quint
Comment 1 2024-10-19 07:08:31 PDT
Radar WebKit Bug Importer
Comment 2 2024-10-19 07:08:45 PDT
EWS
Comment 3 2024-10-19 10:54:42 PDT
Committed 285474@main (68f11b4a7c5e): <https://commits.webkit.org/285474@main> Reviewed commits have been landed. Closing PR #35488 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.