[web-animations] `shouldFireDOMEvents()` and `invalidateDOMEvents()` on `StyleOriginatedAnimation` should be private https://bugs.webkit.org/show_bug.cgi?id=281820

Reviewed by Anne van Kesteren.

* Source/WebCore/animation/StyleOriginatedAnimation.h:

Canonical link: https://commits.webkit.org/285474@main